# SpamSentry

./: Cargo.toml  README.md  config.toml
src/: config.rs  main.rs
