[package]
name = "SpamSentry"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2
debug = 0

[profile.dev]
opt-level = 0
debug = 1

[dependencies]
toml = "0.8.19"
log_x = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
matrix-sdk = "0.7.1"
url = "2.5.2"
